Reduce wrapper width to prevent sidebar photo from being cut off

--- a/src/static/css/layout/_main.scss
+++ b/src/static/css/layout/_main.scss
@@ -10,4 +10,6 @@
   @include vendor("flex-grow", "1");
   -ms-flex: 1;
   width: 100%;
+  min-width: 0;
+  max-width: calc(100% - 23em);
 }
